--- a/ch4/keypad/keypad/ino.ini
+++ b/ch4/keypad/keypad/ino.ini
@@ -3,7 +3,7 @@ board-model = uno
 
 [upload]
 board-model = uno
-serial-port = /dev/tty4
+serial-port = /dev/ttyO4
 
 [serial]
-serial-port = /dev/tty4
+serial-port = /dev/ttyO4
